--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,17 @@
   ],
   "require": {
     "php": ">=5.3.0",
-    "luka8088/phops": "@dev"
+    "luka8088/phops": "@dev",
+    "luka8088/phutils": "@dev"
   },
   "repositories": [
     {
       "type": "vcs",
       "url":  "https://github.com/luka8088/phops.git"
+    },
+    {
+      "type": "vcs",
+      "url":  "https://github.com/luka8088/phutils.git"
     }
   ],
   "config": {
